<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- TimePicker -->
    <TimePicker
        android:id="@+id/time_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- RadioGroup for Repeat Options -->
    <RadioGroup
        android:id="@+id/repeat_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/time_picker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/radio_daily"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/daily"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radio_weekly"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/weekly" />
    </RadioGroup>

    <!-- Weekly Options -->
    <GridLayout
        android:id="@+id/weekly_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:columnCount="4"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/repeat_options"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <CheckBox
            android:id="@+id/checkbox_mon"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/mon" />

        <CheckBox
            android:id="@+id/checkbox_tue"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/tue" />

        <CheckBox
            android:id="@+id/checkbox_wed"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/wed" />

        <CheckBox
            android:id="@+id/checkbox_thu"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/thu" />

        <CheckBox
            android:id="@+id/checkbox_fri"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/fri" />

        <CheckBox
            android:id="@+id/checkbox_sat"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/sat" />

        <CheckBox
            android:id="@+id/checkbox_sun"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/sun" />
    </GridLayout>

    <!-- Spinner for Category Selection -->
    <Spinner
        android:id="@+id/category_spinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/weekly_options"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Set Reminder Button -->
    <Button
        android:id="@+id/set_reminder_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/set_reminder"
        app:layout_constraintTop_toBottomOf="@id/category_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Active Reminders List -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/reminders_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/set_reminder_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>